--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "localforage": "^1.10.0",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.320.0",
     "match-sorter": "^6.3.3",
     "next-themes": "^0.2.1",
@@ -47,6 +48,7 @@
     "@types/node": "^20.11.14",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-lottie": "^1.2.10",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
